# SatyrAV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  setup-mingw-deps.sh
VSCodeExt/: NGKSoftwareFramework.code-workspace  README.md  language-configuration.json  package.json  satyrav-ngk-0.1.0.vsix
VSCodeExt/syntaxes/: ngk.tmLanguage.json
cmake/: FindFFmpeg.cmake  MinGW-w64.cmake
docs/: CHANGELOG.md  README.md  TODO.md  architecture.md  building.md  commands-compact.md  commands.md  controls.md  project-structure.md  scene-format.md  video-pipeline.md
installer/: satyr-av.nsi
src/: App.cpp  App.hpp  main.cpp  satyr-av.rc
src/core/: AssetPath.hpp  Config.cpp  Config.hpp  CueEngine.cpp  CueEngine.hpp  Logger.cpp  Logger.hpp  Platform.cpp  Platform.hpp  Project.cpp  Project.hpp  SceneParser.cpp  SceneParser.hpp  SchemaParser.cpp  SchemaParser.hpp  Types.cpp  Types.hpp  Version.hpp
src/input/: InputHandler.cpp  InputHandler.hpp  KeyBindings.hpp
src/render/: MasterWindow.cpp  MasterWindow.hpp  MediaCache.cpp  MediaCache.hpp  MediaPlayer.cpp  MediaPlayer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  SlaveWindow.cpp  SlaveWindow.hpp  TextRenderer.cpp  TextRenderer.hpp
src/screens/: LoadProjectScreen.cpp  LoadProjectScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  NewProjectScreen.cpp  NewProjectScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  PerformanceScreen.cpp  PerformanceScreen.hpp  Screen.hpp  SplashScreen.cpp  SplashScreen.hpp
src/ui/: DebugPopup.cpp  DebugPopup.hpp  DisplaySizePopup.cpp  DisplaySizePopup.hpp  Dropdown.cpp  Dropdown.hpp  HelpPopup.cpp  HelpPopup.hpp  ListView.cpp  ListView.hpp  OverviewPopup.cpp  OverviewPopup.hpp  Popup.cpp  Popup.hpp  TextField.cpp  TextField.hpp  Widget.hpp
